--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="barca_blue">#004c99</color>
+    <color name="barca_red">#a70042</color>
+    <color name="barca_yellow">#edbc00</color>
 </resources>
